# shimmer-tutorials

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml  simple-shapes-dataset-inference.ipynb  simple-shapes-dataset-training.ipynb
Cognition_Academy/: README.md
