[tool.poetry]
name = "shimmer-tutorials"
version = "0.1.0"
description = ""
authors = ["bdvllrs <bdvllrs@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
jupyterlab = "^4.3.4"
ipympl = "^0.9.6"
shimmer-ssd = {git = "git@github.com:ruflab/shimmer-ssd.git", rev = "main"}


[tool.poetry.group.dev.dependencies]
jupyterlab-vim = "^4.1.4"
jupyterlab-code-formatter = "^3.0.2"
ruff = "^0.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
